--- a/reminderapp/requirements/requirements.txt
+++ b/reminderapp/requirements/requirements.txt
@@ -5,10 +5,13 @@ billiard==3.3.0.23
 celery==3.1.18
 decorator==4.0.10
 Django==1.9.8
+django-filter==0.13.0
+djangorestframework==3.4.0
 ipdb==0.10.1
 ipython==5.0.0
 ipython-genutils==0.1.0
 kombu==3.0.35
+Markdown==2.6.6
 MySQL-python==1.2.5
 pathlib2==2.1.0
 pexpect==4.2.0
