--- a/reminderapp/requirements/requirements.txt
+++ b/reminderapp/requirements/requirements.txt
@@ -2,7 +2,7 @@ amqp==1.4.9
 anyjson==0.3.3
 backports.shutil-get-terminal-size==1.0.0
 billiard==3.3.0.23
-celery==3.1.18
+celery==3.1.23
 decorator==4.0.10
 Django==1.9.8
 django-filter==0.13.0
@@ -24,3 +24,4 @@ simplegeneric==0.8.1
 six==1.10.0
 traitlets==4.2.2
 wcwidth==0.1.7
+yapf==0.11.0
